# face4

./: .gitattributes  .gitignore  README.md  instructions.md  pyproject.toml  requirements.txt
configs/: arcface_default.json  cases.yaml  geometry_default.json  geometry_extended_all.json  report.yaml  smoke.yaml
docs/: FACE3_CORRECTNESS_AUDIT.md
face4/: __init__.py
face4/core/: __init__.py  cases.py  identity.py  image_metrics.py  parity.py  runner.py  runner_correct.py  runtime.py  utils.py
face4/core/geometry/: __init__.py  combined_face.py  dct.py  dct_image.py  dct_warp_legacy.py
face4/evaluation/: __init__.py  deepface_panel.py  instruct.py
face4/models/: __init__.py  arcface.py  differentiable_instruct.py  iresnet.py
face4/scripts/: __init__.py  build_report.py  check_instruct_parity.py  fix_public_stock_edits.py  generate_perturbation_samples.py  generate_perturbed_from_config.py  run_matrix.py  setup_arcface.py  smoke_dct_image.py  smoke_identity.py  smoke_timing.py  summarize_runs.py  verify_saved_perturbed_edits.py
outputs/correctness_check/face_002__face_002__add_black_sunglasses__seed_250852__steps_2/: parity_report.json
outputs/edited_output_identity_2/20260713_103809_edited_output_identity_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/reports/edited_output_identity_2/: identity_panel_all_runs.csv  image_index.md  (+3 more)
outputs/smoke/: arcface_setup_report.json
scripts/: download_arcface_checkpoint_a6000.sh  eval_arcface_simple.py  install_linux_a6000.sh  install_windows.ps1
tests/: test_core_correctness.py
(+91 files in other folders)
